2016-09-05  David Shaw  <dshaw@jabberwocky.com>

	* NEWS, configure.ac: Post-release commit.

	* NEWS, configure.ac: Preparing 1.4 release.

	* NEWS, output.h, output.c, paperkey.c (set_binary_mode): Fix
	binary vs text output mismatch when using "--output-type raw" on
	Windows platforms.  Does not affect any non-Windows platforms.
	Found by Thierry Ambrus.

	* README: Clarify output-width a bit.

	* paperkey.spec.in: Use %license for the COPYING file and run the
	self checks during build.

2016-09-04  David Shaw  <dshaw@jabberwocky.com>

	* README: PowerPC Macs are basically gone, so remove the OSX
	(sorry: macOS!) universal binary stuff.

2013-01-03  David Shaw  <dshaw@jabberwocky.com>

	* NEWS, configure.ac: Post-release commit.

	* NEWS, configure.ac: Preparing 1.3 release.

	* README: Clarify language a bit.

2012-11-29  David Shaw  <dshaw@jabberwocky.com>

	* checks/roundtrip.sh, checks/roundtrip-raw.sh: Use /bin/echo as
	some shell builtin echoes don't understand "echo -n".

	* checks: Add tests for RSA and ECC keys.

	* output.c (output_openpgp_header): Use the same "tag under 16,
	use old-style packets" as other OpenPGP programs.  It's crazy to
	have a roundtrip test that doesn't compare the result with the
	input.

2012-06-13  David Shaw  <dshaw@jabberwocky.com>

	* parse.c (extract_secrets): Add support for ECDH and ECDSA as per
	RFC 6637.

	* paperkey.1: Internet is capitalized.

	* restore.c (restore): Fix problem with missing sigs on
	regenerated key.

2009-10-15  David Shaw  <dshaw@jabberwocky.com>

	* NEWS, configure.ac: Post-release commit.

2009-10-14  David Shaw  <dshaw@jabberwocky.com>

	* NEWS, configure.ac: Preparing 1.2 release.

	* paperkey.c (main): Force the umask to go-rwx, as we are going to
	be creating files that contain secret key material.

	* paperkey.1, paperkey.c (main, usage): Add -o as alias to
	--output, and document -h (help), -V (version), and -v (verbose).

	* README: Clarify how to build a 32-bit/64-bit OSX universal